# miniasync

./: CMakeLists.txt  ChangeLog  README.md
.github/workflows/: coverity.yml  on_pull_request.yml
cmake/: functions.cmake  libuasync-config.cmake.in  libuasync.pc.in  packages.cmake
doc/: CMakeLists.txt  data_mover_dml_get_vdm.3.md  data_mover_dml_new.3.md  data_mover_sync_get_vdm.3.md  data_mover_sync_new.3.md  data_mover_threads_get_vdm.3.md  data_mover_threads_new.3.md  future_context_get_data.3.md  future_context_get_data.3.md.in  future_context_get_output.3.md  future_context_get_output.3.md.in  future_context_get_size.3.md  future_context_get_size.3.md.in  future_poll.3.md  future_poll.3.md.in  manuals.txt  miniasync.7.md  miniasync_dml_vdm.3.md.in  miniasync_future.3.md.in  miniasync_future.7.md  miniasync_runtime.3.md.in  miniasync_runtime.7.md  miniasync_vdm.3.md.in  miniasync_vdm.7.md  miniasync_vdm_dml.3.md.in  miniasync_vdm_dml.7.md  miniasync_vdm_synchronous.3.md.in  miniasync_vdm_synchronous.7.md  miniasync_vdm_threads.3.md.in  miniasync_vdm_threads.7.md  runtime_delete.3.in  runtime_new.3.md  runtime_new.3.md.in  runtime_wait.3.md  vdm_flush.3.md  vdm_is_supported.3.md  vdm_memcpy.3.md  vdm_memmove.3.md  vdm_memset.3.md
examples/: CMakeLists.txt  README.md
examples/basic/: CMakeLists.txt  basic.c
examples/basic-async/: basic-async.c
examples/basic_cpp/: basic.cpp  coroutine_helpers.hpp
examples/coroutine_memcpy/: coroutine_helpers.hpp  coroutine_memcpy.cpp  executor.hpp  miniasync_operation.cpp  miniasync_operation.hpp
examples/hashmap/: hashmap.c
extras/dml/: CMakeLists.txt  README.md  data_mover_dml.c  dml_mover.c  vdm_dml.c
extras/dml/include/: libminiasync-dml.h  libminiasync-vdm-dml.h
extras/dml/include/libminiasync-dml/: dml_mover.h  vdm_dml.h
extras/dml/utils/: util_dml.c
src/: CMakeLists.txt  data_mover_sync.c  data_mover_threads.c  future.c  miniasync.def  miniasync.map  mover.c  runtime.c  vdm.c  vdm_threads.c
src/core/: alloc.c  alloc.h  cpu.c  cpu.h  fault_injection.h  membuf.c  membuf.h  os.h  os_posix.c  os_thread_windows.c  os_windows.c  out.c  out.h  ringbuf.c  ringbuf.h  util.c  util.h  util_posix.c  util_windows.c  valgrind_internal.h
src/include/: future.h  libminiasync.h  libuasync.h  mover.h  runtime.h
src/include/libminiasync/: data_mover_threads.h  future.h  runtime.h  vdm.h  vdm_threads.h
src/windows/include/: platform.h
tests/: CMakeLists.txt  test_helpers.h
tests/cmake/: ctest_helpers.cmake  test_helpers.cmake
tests/data_mover_dml/: data_mover_dml.c
tests/data_mover_dml_flush/: data_mover_dml_flush.c  test_data_mover_dml_flush.cmake
tests/data_mover_dml_memcpy/: data_mover_dml_memcpy.c  test_data_mover_dml_memcpy.cmake
tests/data_mover_dml_memmove/: data_mover_dml_memmove.c  test_data_mover_dml_memmove.cmake
tests/data_mover_dml_memset/: data_mover_dml_memset.c  test_data_mover_dml_memset.cmake
tests/dml_vdm/: dml_vdm.c  test_dml_vdm.cmake
tests/dummy/: CMakeLists.txt  test_dummy.cmake
tests/dummy_negative/: test_dummy_negative.cmake
tests/ex_basic/: CMakeLists.txt  test_ex_basic.cmake
tests/ex_basic_async/: test_ex_basic_async.cmake
tests/future/: test_future.c  test_future.cmake
tests/future_flags/: future_is_async_flag.c  test_future_flags.cmake
tests/future_properties/: future_property_async.c
tests/membuf/: membuf_simple.c  test_membuf.cmake
tests/memcpy_pthreads/: memcpy_pthreads.c  test_memcpy_pthreads.cmake
tests/memcpy_threads/: memcpy_threads.c  test_memcpy_threads.cmake
tests/memmove_sync/: memmove_sync.c
tests/memmove_threads/: memmove_threads.c
tests/memset_sync/: memset_sync.c
tests/memset_threads/: memset_threads.c
tests/runtime_test/: runtime_test.c  test_runtime.cmake
tests/vdm/: test_vdm.c
tests/vdm_operation_future_poll/: test_vdm_operation_future_poll.cmake  vdm_operation_future_poll.c
utils/: check-area.sh  check-commit.sh  mans_header.md  src2mans.sh
utils/docker/: build.sh  run-build.sh  run-coverity.sh  run-doc-update.sh
utils/docker/images/: Dockerfile.fedora-34  Dockerfile.fedora-35  Dockerfile.ubuntu-21.04  build-image.sh  install-dml.sh
